# ps_ray_trace

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.bat  setup.py
includes/: image_writer.h  utility.h
ispc_shaders/: camera.isph  hit_record.isph  hittable.h  hittable.ispc  hittable.isph  ray.isph  simple.h  simple.ispc  sphere.h  sphere.ispc  sphere.isph  tracer.h  tracer.ispc  utility.isph  vec3.isph
outputs/: antialiasing.ppm  diffuse.ppm  hittables.ppm  metal.ppm  sphere_normals.ppm  test.ppm
sources/: image_writer.cpp  utility.cpp
